--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,42 +1,48 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
+/* App.css */
+
+body {
+  background-color: #f3f4f6; /* Cambia el color de fondo del cuerpo según tus preferencias */
+}
+
+.container {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-box {
+  background-color: white;
   padding: 2rem;
-  text-align: center;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.5s ease; /* Animación de cambio de color durante 0.5 segundos */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* Estilo adicional para el formulario si lo deseas */
+.login-box form {
+  /* Agrega estilos adicionales para el formulario aquí */
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Animación para cambiar el color de fondo cada segundo */
+@keyframes changeBackgroundColor {
+  0% {
+    background-color: #ff7e5f;
   }
-  to {
-    transform: rotate(360deg);
+  25% {
+    background-color: #ffa07a;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  50% {
+    background-color: #66c7f4;
+  }
+  75% {
+    background-color: #98ddca;
+  }
+  100% {
+    background-color: #ff7e5f;
   }
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.animated-background {
+  animation: changeBackgroundColor 4s infinite; /* Cambia cada segundo (4 segundos de duración total) */
 }
